Match-id-2d915e5a490c193f2eb640cfff49ef4764557d27

--- a/api/external/api-anti-ransomware.yaml
+++ b/api/external/api-anti-ransomware.yaml
@@ -85,7 +85,7 @@ paths:
           x-public-api: 'N'
           maxItems: 2
           x-impact-subsystem: 不影响
-        - name: startPage
+        - name: pageNo
           in: query
           description: 分页起始页面
           required: false
